web/themes/custom/union_marketing/scss/components/_media.scss
.media__caption,
.field--field-representative-img-caption {
  font-size: var(--cu-ms-1);
  line-height: 1.4;
  margin: .5em auto 0;
  max-width: var(--cu-max-width-section, #{$max-width-section});
}

.paragraph--type--image .media__caption {
  padding-left: var(--cu-ps1);

  @include breakpoint(sm) {
    padding-left: var(--cu-ps2);
  }

  @include breakpoint(md) {
    padding-left: 0;
  }
}

.field--field-representative-img-caption {
  text-align: right;
}

// Video width hack until captioned videos are working.
.cu-media.media--remote-video {
  width: 100%;
  min-width: 50%;
}

.cu-media.align-right,
.cu-media.align-left {
  margin: 0 0 var(--cu-vr1) 0;
  width: 100%;

  .cu-image {
    width: 100%;
  }

  @include breakpoint(sm) {
    width: auto;
    max-width: 50%;

    .cu-image {
      width: auto;
    }
  }

  .field--field-media-image {
    margin: 0;
  }
}

@include breakpoint(sm) {
  .cu-media.align-right {
    float: right;
    margin-left: var(--cu-ps2);
  }

  .cu-media.align-left {
    float: left;
    margin-right: var(--cu-ps2);
  }
}

.cu-card__media .media--position-top .cu-image,
.cu-banner__media .media--position-top .cu-image {
  object-position: top;
}

.cu-card__media .media--position-bottom .cu-image,
.cu-banner__media .media--position-bottom .cu-image {
  object-position: bottom;
}

.paragraph--type--media-deck {
  @include full-width();
  --cu-component-margin: var(--cu-vr1);

  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto auto;
  gap: var(--cu-ps-2);
  margin-top: var(--cu-component-margin);
  margin-bottom: var(--cu-component-margin);

  :nth-child(2) {
    grid-row: 1/3;
    grid-column: 2;
  }

  .media__caption {
    grid-row: -1;
    grid-column: 1/-1;
    margin: 0;
    padding: 0 var(--cu-ps0);
  }

  .cu-image {
    object-fit: cover;
    width: 100%;
    align-self: stretch;
  }

  &--portrait-left {
    :nth-child(2) {
      grid-column: 1;
    }
  }

  @include breakpoint(sm) {
    --cu-component-margin: var(--cu-vr2);
    grid-template-rows: repeat(3, auto);
    gap: var(--cu-ps0);

    :nth-child(2) {
      grid-row: 1/3;
    }

    :nth-child(3) {
      grid-row: 2/4;
    }

    .media__caption {
      grid-column: 2;
      grid-row: 3;
      padding: 0 var(--cu-ps1) 0 0;
    }

    &--portrait-left {
      .media__caption {
        grid-column: 1;
        padding: 0 0 0 var(--cu-ps1);
      }
    }
  }

  @include breakpoint(md) {
    --cu-component-margin: var(--cu-vr3);
    gap: 40px;

    .media__caption {
      max-width: 50%;
    }

    &--portrait-left {
      .media__caption {
        justify-self: end;
        text-align: right;
        text-align: justify;
        hyphens: auto;
      }
    }
  }
}

.ilr-effect-image.curtain-reveal::before {
  background-position: var(--image-focal-point);
}

